# calstat

./: .gitignore  LICENSE  README.md  pyproject.toml
src/calstat/: __main__.py  main.py
src/calstat/utils/: calendar.py  config.py  event.py  file_definitions.py
