[project]
authors = [{name = "Ioanna Nefeli Papadopoulou", email = "188455911+ionepa@users.noreply.github.com"}]
dependencies = []
name = "calstat"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
calstat = { path = ".", editable = true }

[tool.pixi.tasks]
run = "python -m calstat"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
check = { depends-on = ["lint", "format-check", "test"] }

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
